--- a/DrSwizzler.csproj
+++ b/DrSwizzler.csproj
@@ -5,7 +5,8 @@
     <Authors>Shadowth117</Authors>
     <Description>A library for deswizzling and swizzling texture data for various game consoles.</Description>
     <PackageProjectUrl>https://github.com/Shadowth117/DrSwizzler</PackageProjectUrl>
-    <AssemblyVersion>1.0</AssemblyVersion>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <Version>$(AssemblyVersion)</Version>
   </PropertyGroup>
 
 </Project>
